unpackaged/main/default/objects/appirio_core__Config_Group__c/appirio_core__Config_Group__c.object-meta.xml
<CustomObject>
    <customHelpPage>appirio_core__ConfigurationHelp</customHelpPage>
    <description>Core package object. Configuration groups are organized by function--for example, Create Project--and have a name, unique key, description, and version. They each contain several configuration options: use these to configure FinancialForce PSA, as well as Salesforce custom settings.</description>
    <label>Configuration Group</label>
    <nameField>
        <label>Configuration Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>