unpackaged/main/default/objects/appirio_core__Config_Group__c/fields/appirio_core__Description__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Description__c</fullName>
    <description>Description of the config group</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>