unpackaged/main/default/objects/appirio_core__Config_Group__c/fields/appirio_core__Key__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Key__c</fullName>
    <description>A unique identifier for this group that can be used in code to retrieve this group.</description>
    <label>Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>