unpackaged/main/default/objects/appirio_core__Config_Group__c/fields/appirio_core__Version__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Version__c</fullName>
    <description>The version of the application that this option was added</description>
    <label>Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>