unpackaged/main/default/objects/appirio_core__Config_Group__c/listViews/appirio_core__All.listView-meta.xml
<ListView>
    <fullName>appirio_core__All</fullName>
    <columns>NAME</columns>
    <columns>appirio_core__Key__c</columns>
    <columns>appirio_core__Description__c</columns>
    <columns>appirio_core__Version__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>